<resources>
    <string name="app_name">Going Green</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="scan">Scan</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="all">All</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="flowers">Flowers</string>
    <string name="trees">Trees</string>
    <string name="herbs">Herbs</string>
    <string name="bushes">Bushes</string>
    <string name="ferns">Ferns</string>
    <string name="grasses">Grasses</string>
    <string name="mosses">Mosses</string>
    <string name="shrub">Shrub</string>
    <string name="aquatic">Aquatic Plant</string>
    <string name="climbers">Climbers</string>
    <string name="coniferns">Coniferns</string>

    <string name="message">Message</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="check_out">Check Out</string>

    <string name="product_details">Product Details</string>
    <string name="monstera">Monstera</string>
    <string name="monstera_price">₱125</string>
    <string name="monstera_sold">1.1K sold</string>
    <string name="monstera_stars">4.5 (678)</string>
    <string name="monstera_quantity">1</string>
    <string name="about">About</string>
    <string name="about_content">
    Native to the rainforests of Central America, the big, bold Monstera deliciosa plant is also known as the "split-leaf philodendron." This easy-to-grow climbing evergreen can be found in many designer spaces for its "wow" factor.

    Indoors, the plant has a moderate growth rate and can grow in height about 1 to 2 feet a year. Its naturally glossy large heart-shaped leaves have a characteristic split. You'll also spot intricate aerial roots growing out of the soil which benefit the plant by supporting the stems that hold leaves that can grow to 3 feet long.

    Plant outdoors in the right zone at any time during the year and it will also produce tannish-cream flowers pollinated by bees and edible juicy fruit with the combined flavor of pineapple and banana. However, fruiting is not common in houseplants. This beautiful plant can be toxic to pets.
    </string>
</resources>