<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        >

        <LinearLayout
            android:id="@+id/top_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <ImageView
                android:id="@+id/arrow_back_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lighter_white"
                android:src="@drawable/arrow_back_icon"
                android:padding="10dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/product_details_textview"
                />

            <TextView
                android:id="@+id/product_details_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:background="@color/lighter_white"
                android:padding="10dp"
                android:text="@string/product_details"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="22dp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintLeft_toRightOf="@id/arrow_back_imageview"
                app:layout_constraintRight_toLeftOf="@id/shopping_cart_imageview"
                app:layout_constraintTop_toTopOf="parent"
                ></TextView>

            <ImageView
                android:id="@+id/shopping_cart_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/lighter_white"
                android:src="@drawable/shopping_cart_icon"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/product_details_textview"
                app:layout_constraintRight_toRightOf="parent"
                ></ImageView>
        </LinearLayout>

        <ScrollView
            android:id="@+id/product_details_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="60dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/all_details_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lighter_white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/top_linearlayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <LinearLayout
                    android:id="@+id/product_details_complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_margin="0dp"
                        >

                        <ImageView
                            android:id="@+id/plant_imageview"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:background="@color/mid_gray"
                            android:paddingTop="30dp"
                            android:src="@drawable/monstera_image"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/top_linearlayout"
                            ></ImageView>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/details_complete_linearlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp"
                        >

                        <LinearLayout
                            android:id="@+id/plantname_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:id="@+id/plant_name_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="5dp"
                                android:text="@string/monstera"
                                android:textSize="35dp"
                                android:textColor="@color/dark_gray"
                                android:fontFamily="sans-serif-black"
                                ></TextView>

                            <ImageView
                                android:id="@+id/favorite_imageview"
                                android:layout_width="52dp"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:src="@drawable/favorite_icon"
                                app:layout_constraintLeft_toRightOf="@id/plant_name_textview"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/stars_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                android:id="@+id/star_imageview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/star_icon"
                                android:padding="5dp"
                                ></ImageView>

                            <TextView
                                android:id="@+id/star_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/monstera_stars"
                                android:textSize="15dp"
                                android:padding="5dp"
                                android:textColor="@color/dark_gray"
                                ></TextView>

                            <TextView
                                android:id="@+id/sold_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/monstera_sold"
                                android:textSize="15dp"
                                android:padding="5dp"
                                android:textColor="@color/dark_gray"
                                ></TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/price_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/price_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/monstera_price"
                                android:textSize="30dp"
                                android:textColor="@color/jade_green"
                                android:fontFamily="sans-serif-black"
                                android:padding="10dp"
                                ></TextView>

                            <ImageView
                                android:id="@+id/minus_imageview"
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:src="@drawable/minus_gray"
                                ></ImageView>

                            <TextView
                                android:id="@+id/quantity_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/monstera_quantity"
                                android:textSize="30dp"
                                android:fontFamily="sans-serif-black"
                                android:padding="5dp"
                                android:textColor="@color/dark_gray"
                                ></TextView>

                            <ImageView
                                android:id="@+id/plus_imageview"
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:src="@drawable/more_gray"
                                ></ImageView>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/about_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="20dp"
                            >

                            <TextView
                                android:id="@+id/about_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="5dp"
                                android:text="@string/about"
                                android:textSize="25dp"
                                android:textColor="@color/dark_gray"
                                android:fontFamily="sans-serif-black"
                                ></TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/about_content_linearlayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/about_content_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingLeft="5dp"
                                android:text="@string/about_content"
                                android:textSize="15dp"
                                android:textColor="@color/middark_gray"
                                ></TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottom_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center"
            >

            <Button
                android:id="@+id/message_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/dirty_white"
                android:text="@string/message"
                android:textColor="@color/jade_green"
                app:cornerRadius="0dp"
                app:icon="@drawable/message_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/add_to_cart_button" />

            <Button
                android:id="@+id/add_to_cart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/dirty_white"
                android:text="@string/add_to_cart"
                android:textColor="@color/jade_green"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/message_button"
                app:layout_constraintRight_toLeftOf="@id/check_out_button" />

            <Button
                android:id="@+id/check_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/jade_green"
                android:paddingHorizontal="0dp"
                android:text="@string/check_out"
                android:textColor="@color/light_gray"
                app:cornerRadius="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/add_to_cart_button"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>